syntax = "proto3";

package com.sitewhere.grpc.model;

option java_outer_classname = "UserModel";

import "sitewhere-common.proto";

// #############
// ### USERS ###
// #############

// Request for creating a user.
message GUserCreateRequest {
	GOptionalString username = 1;
	GOptionalString password = 2;
	GOptionalString firstName = 3;
	GOptionalString lastName = 4;
	GOptionalString email = 5;
	GUserAccountStatus status = 6;
	repeated string roles = 7;
	map<string, string> metadata = 8;
}

// Criteria for tenant search.
message GUserSearchCriteria {
	GPaging paging = 1;
}

// Results for user search.
message GUserSearchResults {
	int64 count = 1;
	repeated GUser users = 2;
}

// Information for a user.
message GUser {
	string username = 1;
	string firstName = 2;
	string lastName = 3;
	string email = 4;
	uint64 lastLogin = 5;
	GUserAccountStatus status = 6;
	repeated GRole roles = 7;
	GEntityInformation entityInformation = 8;
}

// ###########################
// ### GRANTED AUTHORITIES ###
// ###########################

// Request for creating a granted authority.
message GGrantedAuthorityCreateRequest {
	string authority = 1;
	string description = 2;
	GGrantedAuthorityReference parent = 3;
	bool group = 4;
}

// Criteria for granted authority search.
message GGrantedAuthoritySearchCriteria {
	GPaging paging = 1;
}

// Results for granted authority search.
message GGrantedAuthoritySearchResults {
	int64 count = 1;
	repeated GGrantedAuthority authorities = 2;
}

// Information for a granted authority.
message GGrantedAuthority {
	string authority = 1;
	string description = 2;
	GGrantedAuthorityReference parent = 3;
	bool group = 4;
}


// ###########################
// ### Roles ###
// ###########################

// Request for creating a granted authority.
message GRoleCreateRequest {
	string role = 1;
	string description = 2;
	repeated string authorities = 3;
}

// Criteria for granted authority search.
message GRoleSearchCriteria {
	GPaging paging = 1;
}

// Results for granted authority search.
message GRoleSearchResults {
	int64 count = 1;
	repeated GRole roles = 2;
}

// Information for a granted authority.
message GRole {
	string role = 1;
	string description = 2;
	repeated GGrantedAuthority authorities = 3;
}